<resources>
    <string name="app_name">Nano Lite</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="upload_image">Upload Image</string>
    <string name="scanning_history">Scanning History</string>
    <string name="title_history">History</string>
    <string name="title_recommendation">Recommendation for you</string>
    <string name="scan">Scan</string>
    <string name="predict_image">Predict Image</string>
    <string name="textview_hint">Upload Image and Press Predict\nOR\nPress Camera and Take a Picture</string>
    <string name="predict_hint">Image has been selected\nPress predict to see result</string>
</resources>