<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_history">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.nanolite_app.presentation.ui.dashboard.ClassificationFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_classification" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.nanolite_app.presentation.ui.notifications.AccountFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.nanolite_app.presentation.ui.home.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

</navigation>