<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.dashboard.ClassificationFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_dashboard_black_24dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/btn_top"
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:paddingTop="5.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_below="@+id/image">

        <Button
            android:id="@+id/btn_upload_image"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/upload_image"
            android:layout_weight="1.0"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_predict"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/predict_image"
            android:layout_weight="1.0"
            android:enabled="false"
            android:textAllCaps="false" />
    </LinearLayout>



    <TextView
        android:id="@+id/textview_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_top"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:text="@string/textview_hint" />

    <Button
        android:id="@+id/btn_recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_result"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        android:text="@string/title_recommendation"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false" />

</RelativeLayout>